#439 message override (#683)
* wrap message source in a manager #439

* add new key for translation override #439

* inject the configuration repository in message source manager #439

* remove component annotation

* #439 add message source override support

* #439 cleanup, use @JSONData annotation

* #439 expose override props in event, cleanup

* #439 remove event language endpoint

* expose protected method resolveCode #439

* port translation_override_vat_* to new global translation override #439 #640

* #439 initial work for ui: add tab section for internationalization

* #439 remove i18n section in the main panel

* stub for internationalization-editor #439

* load configuration+all languages for internationalization-editor #439

* load bundle+ui work for internationalization-editor #439

* fix compile error #439

* translation ui work #439

* translation ui work #439

* make the ui submit update and delete translation #439

* add search #439

* display override from the previous level too #439

* rename sql file version, remove old conf key #439